# todaytrade

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: clients.yaml  data_configs.yaml
scripts/: backfill_event_klines.py
src/todaytrade/: global_configs.py
src/todaytrade/clients/: __init__.py  moomoo_client.py
src/todaytrade/utils/: load_utils.py
