[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todaytrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moomoo-api>=10.4.6408",
    "pyyaml>=6.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todaytrade"]
